SFDC Automation/src/objects/Customer_Branch__c.object
<CustomObject>
    <description>Customer Branches at Ryder</description>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <inlineHelpText>Place additional comments for service handling

SMO Field: Text in this field and Other Misc. Billing Information field make up the Comments field in SMO</inlineHelpText>
        <label>Additional Comments</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Area_Name__c</fullName>
        <description>Added to identify the region associated with the Ryder Branch for the customer/branch/</description>
        <formula>Ryder_Branch__r.Area_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The region associated to this customer/branch - a correlation to the region of the Ryder branch.</inlineHelpText>
        <label>Area Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Key_Contact_Roll_up__c</fullName>
        <description>Roll-up for # of Billing Contacts on Customer Branch</description>
        <inlineHelpText>Roll-up for # of Billing Contacts on Customer Branch</inlineHelpText>
        <label>Billing Key Contact Roll-up</label>
        <summaryFilterItems>
            <field>Key_Contact__c.Contact_Role__c</field>
            <operation>equals</operation>
            <value>Billing</value>
        </summaryFilterItems>
        <summaryForeignKey>Key_Contact__c.Customer_Branch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Blanket_PO_Number__c</fullName>
        <label>Blanket PO Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BranchAnniversaryDate__c</fullName>
        <description>Branch Anniversary Date</description>
        <inlineHelpText>Branch Anniversary Date</inlineHelpText>
        <label>Branch Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSI_Key_Contact_Roll_up__c</fullName>
        <description>Rolls Up Values for Key Contacts on Customer Branches</description>
        <label>CSI Key Contact Roll-up</label>
        <summaryFilterItems>
            <field>Key_Contact__c.Contact_Role__c</field>
            <operation>equals</operation>
            <value>CSI Contact</value>
        </summaryFilterItems>
        <summaryForeignKey>Key_Contact__c.Customer_Branch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Components_Not_Included__c</fullName>
        <inlineHelpText>Describe any components not included in Service

SMO Field: Component Not Included in Maintenance Plan</inlineHelpText>
        <label>Components Not Included</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Count_of_Customer_Branches__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Customer Branches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Branch_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Branch Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Branch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Branch_Status__c</fullName>
        <description>Indicates whether a Customer/Branch has active vehicles.</description>
        <inlineHelpText>Indicates whether a Customer/Branch has active vehicles.</inlineHelpText>
        <label>Customer Branch Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Requires_PO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Requires PO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DCC_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DCC Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Change_IAM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field shows that you cannot change the IAM field</description>
        <inlineHelpText>This field shows that you cannot change the IAM field</inlineHelpText>
        <label>Do Not Change IAM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Managed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field denotes that this CB is managed by an IAM</description>
        <inlineHelpText>This field denotes that this CB is managed by an IAM</inlineHelpText>
        <label>IAM Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the User object to store the IAM</description>
        <label>IAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Branch_IAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastSurveyDate__c</fullName>
        <description>This date indicates when the last survey was done.</description>
        <label>Last Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastSurveySubmissionDate__c</fullName>
        <description>Date on which last survey was submitted.</description>
        <label>Last Survey Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_12_months_FSL_revenue_c_del__c</fullName>
        <label>Last 12 months FSL revenue</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_12_months_RPM_revenue__c</fullName>
        <label>Last 12 months RPM revenue</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_CS_Score__c</fullName>
        <description>Score for the branch that identifies the customer satisfaction ranking from the results of the surveys.</description>
        <inlineHelpText>Score for the branch that identifies the customer satisfaction ranking from the results of the surveys.</inlineHelpText>
        <label>Lease - CS Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maint_Key_Contact_Roll_up__c</fullName>
        <description>Roll-up for # of Maintenance Contacts on Customer Branch</description>
        <label>Maint Key Contact Roll-up</label>
        <summaryFilterItems>
            <field>Key_Contact__c.Contact_Role__c</field>
            <operation>equals</operation>
            <value>Maintenance Contact</value>
        </summaryFilterItems>
        <summaryForeignKey>Key_Contact__c.Customer_Branch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MigratedFrom__c</fullName>
        <label>MigratedFrom</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missing_Key_Contact_Flag__c</fullName>
        <description>Displays Red image to indicate that the Branch is missing a Key Contact</description>
        <formula>IF( ((Maint_Key_Contact_Roll_up__c &lt; 1) &amp;&amp; (CSI_Key_Contact_Roll_up__c &lt; 1)),
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Both Missing&quot;, 30, 30),
IF( Maint_Key_Contact_Roll_up__c &lt; 1, 
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Maintenance Missing&quot;, 30, 30),
IF( CSI_Key_Contact_Roll_up__c &lt; 1,
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;CSI Missing&quot;, 30, 30),
Null
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Missing Key Contact Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Instructions__c</fullName>
        <inlineHelpText>Please specify Subs for PM&apos;s

SMO Field: Other Instructions</inlineHelpText>
        <label>Other Instructions</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Misc_Billing_Information__c</fullName>
        <inlineHelpText>Enter billing information details

SMO Field: Text in this field and Additional Comments field make up the Comments field in SMO</inlineHelpText>
        <label>Other Misc. Billing Information</label>
        <length>6500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Power_Unit_Count__c</fullName>
        <description>Count of Power Units (TRUCKS &amp; TRACTORS)</description>
        <label>Power Unit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_authorized_Repair_Amount__c</fullName>
        <inlineHelpText>SMO Field: Approval or PO if exceeds</inlineHelpText>
        <label>Pre-authorized Repair Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_authorized_Repairs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Checked, the Customer has pre-authorized repairs. 

SMO Field: Customer PO Required</inlineHelpText>
        <label>Pre-authorized Repairs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Account_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Account Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer / Branch</relationshipLabel>
        <relationshipName>Customer_Branch1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Count__c</fullName>
        <description>Used to count the # of Primary Contacts users are trying to add</description>
        <label>Primary Contact Count</label>
        <summaryFilterItems>
            <field>Key_Contact__c.Contact_Type__c</field>
            <operation>equals</operation>
            <value>Primary</value>
        </summaryFilterItems>
        <summaryForeignKey>Key_Contact__c.Customer_Branch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RSM_Plus1_Approved_Vehicle_Count__c</fullName>
        <description>RydeSmart-Displays the total count of all Plus1 vehicles under the customer branch</description>
        <label>Plus1 Approved Vehicle Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSM_Plus_Approved_Vehicle_Count__c</fullName>
        <description>RydeSmart - Displays the total count of all Plus vehicles under the customer branch</description>
        <label>Plus Approved Vehicle Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSM_STD_Approved_Vehicle_Count__c</fullName>
        <description>RydeSmart - Displays the total count of all Plus1 vehicles under the customer branch</description>
        <label>STD Approved Vehicle Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rated_FSL_revenue__c</fullName>
        <label>Rated FSL revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rated_RPM_revenue__c</fullName>
        <label>Rated RPM revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Risk_Status__c</fullName>
        <label>Risk Status</label>
        <picklist>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Status</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ryder_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field for Customer Branch to Ryder branch</description>
        <label>Ryder Branch</label>
        <referenceTo>Ryder_Branch__c</referenceTo>
        <relationshipLabel>Customer / Branch</relationshipLabel>
        <relationshipName>Customer_Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ryder_HQ_Account__c</fullName>
        <description>M/D field between Customer Branch and HQ Accounts</description>
        <label>Ryder HQ Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer / Branch</relationshipLabel>
        <relationshipName>Customer_Branches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Speed_Changes__c</fullName>
        <inlineHelpText>Are speed changes authorized and by whom

SMO Field: Are speed changes authorized and by whom</inlineHelpText>
        <label>Speed Changes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <formula>Ryder_Branch__r.Postal_Code_For_TimeZone_Mapping__r.Time_Zone__c</formula>
        <label>Time Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_on_Hierarchy__c</fullName>
        <formula>IF( (ISPICKVAL($User.Short_Title__c,&quot;SAC&quot;)||ISPICKVAL($User.Short_Title__c,&quot;MOS&quot;)||ISPICKVAL($User.Short_Title__c,&quot;DOS&quot;))
    ,IF(($User.Sales_Territory__c=Customer_Branch_Owner__r.Sales_Territory__c),1,0),
IF( (ISPICKVAL($User.Short_Title__c,&quot;BDM&quot;)||ISPICKVAL($User.Short_Title__c,&quot;CDM&quot;)||ISPICKVAL($User.Short_Title__c,&quot;COMBO&quot;)||ISPICKVAL($User.Short_Title__c,&quot;MDM&quot;))
    ,IF($User.Id=Customer_Branch_Owner__r.Id,1,0),
IF( (ISPICKVAL($User.Short_Title__c,&quot;VP&quot;))
   ,IF($User.Region__c=Customer_Branch_Owner__r.Region__c,1,0),
IF( (ISPICKVAL($User.Short_Title__c,&quot;IAM&quot;)||ISPICKVAL($User.Short_Title__c,&quot;NIAM&quot;))
   ,IF(($User.Id=IAM__r.Id||$User.Id=Ryder_HQ_Account__r.OwnerId),1,0),
IF( (ISPICKVAL($User.Short_Title__c,&quot;IAM Manager&quot;) &amp;&amp; $UserRole.Name &lt;&gt; &apos;Director of Inside Sales&apos;)
   ,IF(($User.Id=IAM__r.Id||$User.Id=IAM__r.ManagerId||$User.Id=Ryder_HQ_Account__r.OwnerId||$User.Id=Ryder_HQ_Account__r.Owner.ManagerId),1,0),
IF( ( $UserRole.Name =&apos;Director of Inside Sales&apos;)
  ,IF((NOT(ISBLANK(IAM__r.Id))||ISPICKVAL(Ryder_HQ_Account__r.Owner.Short_Title__c,&quot;IAM&quot;)||ISPICKVAL(Ryder_HQ_Account__r.Owner.Short_Title__c,&quot;NIAM&quot;)||ISPICKVAL(Ryder_HQ_Account__r.Owner.Short_Title__c,&quot;IAM Manager&quot;)),1,0)
,1)
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User on Hierarchy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VEH_COUNT__c</fullName>
        <label>Vehicle Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ext_customerbranch_id__c</fullName>
        <externalId>true</externalId>
        <label>Ext Cust Branch Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Customer / Branch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Ryder_HQ_Account__c</columns>
        <columns>VEH_COUNT__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer / Branch</pluralLabel>
    <recordTypes>
        <fullName>Contractual</fullName>
        <active>true</active>
        <description>New Record Type for Contractual accounts</description>
        <label>Lease</label>
    </recordTypes>
    <recordTypes>
        <fullName>UVS</fullName>
        <active>true</active>
        <description>Identity</description>
        <label>UVS</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CannotEditCustomerBranchName</fullName>
        <active>true</active>
        <description>Prevents users other than admin from changing name.</description>
        <errorConditionFormula>ISCHANGED(Name ) &amp;&amp; AND(NOT( $Profile.Name = &quot;System Administrator&quot;), NOT( $Profile.Name = &quot;SSO System Administrator&quot;))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You cannot edit the Customer Branch Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CannotEditRyderHQAccount</fullName>
        <active>true</active>
        <description>Used to prevent changes to Account on Customer/Branch</description>
        <errorConditionFormula>ISCHANGED( Ryder_HQ_Account__c ) &amp;&amp; OR(NOT($Profile.Name=&quot;System Administrator&quot;),NOT($Profile.Name=&quot;SSO System Administrator&quot;))</errorConditionFormula>
        <errorDisplayField>Ryder_HQ_Account__c</errorDisplayField>
        <errorMessage>You cannot edit the Ryder HQ Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_Contact_Count_Less_than_2</fullName>
        <active>false</active>
        <errorConditionFormula>Primary_Contact_Count__c &gt;1 &amp;&amp; AND(NOT($Profile.Name=&quot;System Administrator&quot;),NOT($Profile.Name=&quot;SSO System Administrator&quot;))</errorConditionFormula>
        <errorMessage>You may only select one Primary Contact for the Customer / Branch.  Please change remove the existing Primary Contact before adding a new one.</errorMessage>
    </validationRules>
</CustomObject>